<resources>
    <string name="app_name">LAB1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="txtpassword"> password</string>
    <string name="createaccount">Create Account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome Home!!!!</string>
    <string name="title_activity_dd">dd</string>

</resources>
